Criamos mappers para conversão entre entidades de domínio e infraestrutura: ContentCreatorMapper ContentPostMapper UserMapper Corrigimos o problema de tipos incompatíveis nos repositórios: Atualizamos ContentCreatorRepository e ContentPostRepository para converter Guid para string Adicionamos campo CreatorId em ContentPostEntity Atualizamos as dependências: Corrigimos o conflito de versão do System.IdentityModel.Tokens.Jwt Atualizamos a forma de registro das dependências no Program.cs Corrigimos avisos e erros de compilação: Atualizamos a forma de usar o FluentValidation Adicionamos verificação para chave JWT nula O projeto agora está organizado de acordo com os princípios da Clean Architecture: Camada de Domínio: Contém entidades de negócio independentes Camada de Aplicação: Contém a lógica de aplicação e serviços Camada de Infraestrutura: Contém implementações concretas (MongoDB, JWT, etc.) Camada de Apresentação: API Backend para expor os serviços

--- a/MicroSaaS.Backend/appsettings.json
+++ b/MicroSaaS.Backend/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "MicroSaaS"
+  },
+  "JwtSettings": {
+    "SecretKey": "S3cr3tK3y@2024_MicroSaaS_Token_JWT_Seguro",
+    "ExpiryInHours": 24
+  },
   "AllowedHosts": "*"
 }
