--- a/MicroSaaS.Backend/MicroSaaS.Backend.csproj
+++ b/MicroSaaS.Backend/MicroSaaS.Backend.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MicroSaaS.Application\MicroSaaS.Application.csproj" />
+    <ProjectReference Include="..\MicroSaaS.Infrastructure\MicroSaaS.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
