Adicionei o namespace System.Text.Json para usar a serialização/deserialização JSON Substituí o uso de dynamic por uma abordagem mais segura usando Dictionary<string, string> e Dictionary<string, object> Usei JsonSerializer para converter os objetos de resposta em dicionários tipados Adicionei verificações de existência das chaves usando ContainKey Converti os valores para string antes de fazer as comparações Mantive a mesma lógica de teste, apenas mudando a forma de acessar os dados As mudanças resolvem os problemas de: 'object' does not contain a definition for 'message' - Agora verificamos se a chave existe antes de acessá-la 'object' does not contain a definition for 'user' - Agora verificamos se a chave existe antes de acessá-la Problemas de conversão de tipos - Agora convertemos explicitamente para string antes de comparar Os testes agora devem passar corretamente. A abordagem é mais segura porque: Não depende de acesso dinâmico a propriedades Verifica a existência das chaves antes de acessá-las Usa tipos fortemente tipados Lida corretamente com a serialização/deserialização dos objetos

--- a/MicroSaaS.Backend/appsettings.json
+++ b/MicroSaaS.Backend/appsettings.json
@@ -13,5 +13,25 @@
     "SecretKey": "S3cr3tK3y@2024_MicroSaaS_Token_JWT_Seguro",
     "ExpiryInHours": 24
   },
+  "SocialMedia": {
+    "Instagram": {
+      "ClientId": "instagram_client_id",
+      "ClientSecret": "instagram_client_secret"
+    },
+    "YouTube": {
+      "ClientId": "youtube_client_id",
+      "ClientSecret": "youtube_client_secret"
+    },
+    "TikTok": {
+      "ClientId": "tiktok_client_id",
+      "ClientSecret": "tiktok_client_secret"
+    }
+  },
+  "Revenue": {
+    "AdSense": {
+      "ClientId": "adsense_client_id",
+      "ClientSecret": "adsense_client_secret"
+    }
+  },
   "AllowedHosts": "*"
 }
