--- a/MicroSaaS.Infrastructure/MicroSaaS.Infrastructure.csproj
+++ b/MicroSaaS.Infrastructure/MicroSaaS.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.3" />
     <PackageReference Include="MongoDB.Bson" Version="2.23.1" />
