Backend quase completo. Foram criados mais testes unitarios e de integração para garantir isso.

--- a/MicroSaaS.Tests/MicroSaaS.Tests.csproj
+++ b/MicroSaaS.Tests/MicroSaaS.Tests.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\MicroSaaS.Shared\MicroSaaS.Shared.csproj" />
     <ProjectReference Include="..\MicroSaaS.Domain\MicroSaaS.Domain.csproj" />
     <ProjectReference Include="..\MicroSaaS.Application\MicroSaaS.Application.csproj" />
+    <ProjectReference Include="..\MicroSaaS.Infrastructure\MicroSaaS.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
