--- a/MicroSaaS.IntegrationTests/MicroSaaS.IntegrationTests.csproj
+++ b/MicroSaaS.IntegrationTests/MicroSaaS.IntegrationTests.csproj
@@ -1,35 +1,51 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <IsTestProject>true</IsTestProject>
     <IsPackable>false</IsPackable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <UseRazorSourceGenerator>false</UseRazorSourceGenerator>
+    <OutputType>Library</OutputType>
+    <StartupObject></StartupObject>
+    <GenerateProgramFile>true</GenerateProgramFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
-    <PackageReference Include="FluentAssertions" Version="8.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.3" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="Moq" Version="4.20.72" />
-    <PackageReference Include="xunit" Version="2.5.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageReference Include="Moq" Version="4.20.70" />
+    <PackageReference Include="xunit" Version="2.6.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="coverlet.collector" Version="6.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MicroSaaS.Shared\MicroSaaS.Shared.csproj" />
-    <ProjectReference Include="..\MicroSaaS.Domain\MicroSaaS.Domain.csproj" />
+    <ProjectReference Include="..\MicroSaaS.Backend\MicroSaaS.Backend.csproj" />
     <ProjectReference Include="..\MicroSaaS.Application\MicroSaaS.Application.csproj" />
     <ProjectReference Include="..\MicroSaaS.Infrastructure\MicroSaaS.Infrastructure.csproj" />
-    <ProjectReference Include="..\MicroSaaS.Backend\MicroSaaS.Backend.csproj" />
+    <ProjectReference Include="..\MicroSaaS.Domain\MicroSaaS.Domain.csproj" />
+    <ProjectReference Include="..\MicroSaaS.Shared\MicroSaaS.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="appsettings.json">
+    <None Update="appsettings.Testing.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    </None>
   </ItemGroup>
+
+  <!-- Propriedade adicional para desabilitar a geração de componentes Razor -->
+  <PropertyGroup>
+    <DisableRazorSourceGenerator>true</DisableRazorSourceGenerator>
+  </PropertyGroup>
 
 </Project>
