--- a/MicroSaaS.Backend/appsettings.Development.json
+++ b/MicroSaaS.Backend/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MongoDB": {
+    "ConnectionString": "mongodb://mongodb:27017",
+    "DatabaseName": "microsaas",
+    "ConnectTimeout": 60000,
+    "ServerSelectionTimeout": 60000
   }
 }
