--- a/MicroSaaS.Backend/appsettings.json
+++ b/MicroSaaS.Backend/appsettings.json
@@ -36,14 +36,19 @@
     ],
     "EndpointRules": [
       {
-        "Endpoint": "POST:/api/auth/register",
+        "Endpoint": "POST:/api/v1/Auth/register",
         "Period": "1h",
         "Limit": 5
       },
       {
-        "Endpoint": "POST:/api/auth/login",
+        "Endpoint": "POST:/api/v1/Auth/login",
         "Period": "1m",
         "Limit": 10
+      },
+      {
+        "Endpoint": "POST:/api/v1/Auth/refresh-token",
+        "Period": "1m",
+        "Limit": 20
       },
       {
         "Endpoint": "POST:/api/content/*",
@@ -52,10 +57,11 @@
       }
     ]
   },
-  "MongoDbSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "MicroSaaS",
-    "CollectionName": "users"
+  "MongoDB": {
+    "ConnectionString": "mongodb://mongodb:27017",
+    "DatabaseName": "microsaas",
+    "ConnectTimeout": 30000,
+    "ServerSelectionTimeout": 30000
   },
   "JwtSettings": {
     "SecretKey": "your-super-secret-key-with-minimum-16-characters",
