--- a/MicroSaaS.Frontend/package.json
+++ b/MicroSaaS.Frontend/package.json
@@ -2,11 +2,13 @@
   "name": "microsaas-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:7171",
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.15.11",
+    "@mui/x-date-pickers": "^7.28.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +17,8 @@
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.0.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,12 +30,14 @@
   },
   "scripts": {
     "start": "cross-env PORT=3002 react-scripts start",
+    "start:secure": "cross-env PORT=3002 HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
     "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
-    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md,json}"
+    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md,json}",
+    "generate-certs": "node scripts/generate-certs.js"
   },
   "eslintConfig": {
     "extends": [
@@ -60,6 +66,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "http-proxy-middleware": "^3.0.3",
     "prettier": "^2.8.8"
   }
 }
