--- a/MicroSaaS.Infrastructure/MicroSaaS.Infrastructure.csproj
+++ b/MicroSaaS.Infrastructure/MicroSaaS.Infrastructure.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="MongoDB.Bson" Version="2.23.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
     <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.7.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   </ItemGroup>
